Vide screenshots from ffmpeg

--- a/src/app/video/manage/manage.component.html
+++ b/src/app/video/manage/manage.component.html
@@ -31,7 +31,7 @@
       <a href="#">
         <img
           class="card-img-top rounded-tl-2xl w-full"
-          src="assets/img/1.jpg"
+          [src]="clip.screenshotURL"
         />
       </a>
 
